tests/basic/check/eq/020.pan.out
tests/basic/check/eq/020.pan:4:1-4: error: unable to verify type of f20
tests/basic/check/eq/020.pan:7:1-4: error: unable to verify type of f21