tests/basic/check/eq/020.pan
eq : (a:â„¤) â†’ (b:â„¤) â†’ { c:ğ”¹ | c = true âŸº a = b }

f20 : {v:bool|v=false}
f20 = eq 1 1

f21 : {v:bool|v=true}
f21 = eq 1 2
